--- a/src/template.ejs
+++ b/src/template.ejs
@@ -1,11 +1,37 @@
+<% htmlWebpackPlugin.options.lang = htmlWebpackPlugin.options.lang || "en" %>
+<% htmlWebpackPlugin.options.links = htmlWebpackPlugin.options.links || [] %>
 <!DOCTYPE html>
-<html>
+<html lang="<%= htmlWebpackPlugin.options.lang %>">
   <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Static Site Boilerplate" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <% for (item of htmlWebpackPlugin.options.links) { %>
+    <% if (typeof item === 'string' || item instanceof String) { item = { href: item, rel: 'stylesheet' } } %>
+  	<link<% for (key in item) { %> <%= key %>="<%= item[key] %>"<% } %>>
+    <% } %>
+    <% for (key in htmlWebpackPlugin.files.css) { %>
+      <link href="<%= htmlWebpackPlugin.files.css[key] %>" rel="stylesheet">
+    <% } %>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><!-- --></div>
+    <% for (key in htmlWebpackPlugin.files.chunks) { %>
+      <% if (!htmlWebpackPlugin.options.isDevEnv && key === "app") continue; %>
+      <script src="<%= htmlWebpackPlugin.files.chunks[key].entry %>" type="text/javascript"></script>
+    <% } %>
+    <% if (htmlWebpackPlugin.options.googleAnalytics) { %>
+    <script type="text/javascript">
+      window.GoogleAnalyticsObject='ga';window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+      <% if (htmlWebpackPlugin.options.googleAnalytics.trackingId) { %>
+      ga('create','<%= htmlWebpackPlugin.options.googleAnalytics.trackingId %>','auto');
+      <% } else { throw new Error("html-webpack-template requires googleAnalytics.trackingId config"); } %>
+      <% if (htmlWebpackPlugin.options.googleAnalytics.pageViewOnLoad) { %>
+      ga('send','pageview')
+      <% } %>
+    </script>
+    <script async defer src="https://www.google-analytics.com/analytics.js" type="text/javascript"></script>
+    <% } %>
   </body>
 </html>
